# rl-mode-connectivity-DLMMTHE01

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
src/alphago/: config.py  data.py  env.py  game.py  mcts.py  model.py  schedulers.py  train.py  utils.py
src/experiments/: lmc_base_experiment.py  lmc_connect4.py  lmc_go5.py  unconnected_connect4.py
src/experiments/c4/: lmc_c4_cnn.py  lmc_c4_long_cnn.py  lmc_c4_long_mlp.py  lmc_c4_long_resnet.py  lmc_c4_mlp.py  lmc_c4_resnet.py
src/experiments/go_5/: lmc_go5_cnn.py  lmc_go5_long_cnn.py  lmc_go5_long_mlp.py  lmc_go5_long_resnet.py  lmc_go5_mlp.py  lmc_go5_resnet.py
src/mode_connectivity/: README.md  interpolate.py
src/rl/: config.py  data.py  eval.py  game.py  mcts.py  model.py  utils.py
src/visualizations/: img.py
tests/: conftest.py  test_dataset.py  test_env.py  test_interpolate.py  test_mcts.py
tests/data/: games.csv
