[tool.poetry]
name = "rl-mode-connectivity"
version = "0.1.0"
description = ""
authors = ["Capiru <gabriel.silva.2@deliveryhero.com>"]
readme = "README.md"
packages = [
    { include = "rl", from = "src" },
    { include = "mode_connectivity", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10.12,<3.11.0 || >3.11.0"
torch = "^2.6"
tabulate = "^0.9.0"
chess = "^1.11.1"
pettingzoo = "^1.24.3"
pydantic-settings = "^2.7.0"
pydantic = "^2.10.3"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
tqdm = "^4.67.1"
ipython = "^8.30.0"
pygame = "^2.6.1"
scalene = "^1.5.49"
pytest = "^8.3.4"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
